For bug 1045566 Updates to the display of app meta data using icon/text so the user knows: if an app is a cartridge or quickstart if it's OpenShift maintained and receives automatic security updates or if it's partner, community created
Views effected
- console/application_types/*
- console/application_type/cart!{TYPE}
- console/application/*/cartridge_type/*
- console/application/*/cartridge_types

Icon font sets updated
_openshift-icon.css.scss => shield
_openshift-logos-icon.css.scss => Wildfly,load balancer,Laravel,Joomla

--- a/console/app/assets/stylesheets/_iconfont.scss
+++ b/console/app/assets/stylesheets/_iconfont.scss
@@ -125,13 +125,29 @@ h5.alert-heading {
 }
 
 dl.font-icon-legend {
-  margin: 5px 0 0 40px;
-  
+  margin: 0;
+  position: relative;
   dd {
-    margin: 0 0 25px 18px;
+    margin: 0 0 3px 23px;
+    font-size: $smallFontSize;
+    b {
+      font-weight: 600;
+    }
   }
-  dt .font-icon {
-    margin: 0 15px 0 -20px;
-    font-size: $leadFontSize;
+  dt {
+    position: absolute;
+    text-align: center;
+    width: 15px;
+    font-size: $smallFontSize;
+    color: $grayMedium;
+  }
+  &.font-icon-legend-large {
+    dd {
+      margin: 0 0 10px 28px;
+      font-size: $baseFontSize;
+    }
+    dt {
+      font-size: $baseFontSize;
+    }
   }
 }
