--- a/console/app/assets/stylesheets/_openshift-icon.css.scss
+++ b/console/app/assets/stylesheets/_openshift-icon.css.scss
@@ -29,7 +29,7 @@ you can use the generic selector below, but it's slower:
 [class*="icon-"]:before {
 */
 
-.icon-lock, .icon-unlock, .icon-outgoing-link, .icon-arrow-sm-right, .icon-arrow-sm-left, .icon-arrow-sm-down, .icon-arrow-sm-up, .icon-arrow-lg-right, .icon-data-store-part1, .icon-data-store-part2, .icon-non-scalable-part1, .icon-non-scalable-part2, .icon-scalable-part1, .icon-scalable-part2, .icon-gear-lg, .icon-gear-lg-sans-circle, .icon-gear-number-circle, .icon-gear-sm, .icon-gear-sm-sans-circle, .icon-globe, .icon-restart, .icon-cartridge-part1, .icon-cartridge-part2, .icon-ci-arrows, .icon-ci-x, .icon-ci-check, .icon-ci-disabled, .icon-management-part2, .icon-management-part1, .icon-quickstart, .icon-start, .icon-stop, .icon-system-signal-lg, .icon-system-lg, .icon-calendar, .icon-warning-sign, .icon-question-sign, .icon-search, .icon-twitter, .icon-facebook, .icon-google-plus, .icon-info-sign, .icon-bubbles, .icon-code, .icon-angle-down, .icon-angle-up, .icon-angle-right, .icon-angle-left, .icon-plus, .icon-minus, .icon-pencil, .icon-remove-circle, .icon-ban-circle, .icon-ok, .icon-remove, .icon-check, .icon-check-empty, .icon-cloud-upload, .icon-cloud-download, .icon-cloud, .icon-cogs, .icon-download-alt, .icon-bolt, .icon-star-empty, .icon-time, .icon-busy, .icon-list-ol, .icon-app-code, .icon-user, .icon-users, .icon-colocation2, .icon-tasks, .icon-equalizer, .icon-dollar, .icon-euro, .icon-credit, .icon-bug, .icon-domain2, .icon-dyi-hammer, .icon-copy-clipboard, .icon-app-box, .icon-database {
+.icon-lock, .icon-unlock, .icon-outgoing-link, .icon-arrow-sm-right, .icon-arrow-sm-left, .icon-arrow-sm-down, .icon-arrow-sm-up, .icon-arrow-lg-right, .icon-data-store-part1, .icon-data-store-part2, .icon-non-scalable-part1, .icon-non-scalable-part2, .icon-scalable-part1, .icon-scalable-part2, .icon-gear-lg, .icon-gear-lg-sans-circle, .icon-gear-number-circle, .icon-gear-sm, .icon-gear-sm-sans-circle, .icon-globe, .icon-restart, .icon-cartridge-part1, .icon-cartridge-part2, .icon-ci-arrows, .icon-ci-x, .icon-ci-check, .icon-ci-disabled, .icon-management-part2, .icon-management-part1, .icon-quickstart, .icon-start, .icon-stop, .icon-system-signal-lg, .icon-system-lg, .icon-calendar, .icon-warning-sign, .icon-question-sign, .icon-search, .icon-twitter, .icon-facebook, .icon-google-plus, .icon-info-sign, .icon-bubbles, .icon-code, .icon-angle-down, .icon-angle-up, .icon-angle-right, .icon-angle-left, .icon-plus, .icon-minus, .icon-pencil, .icon-remove-circle, .icon-ban-circle, .icon-ok, .icon-remove, .icon-check, .icon-check-empty, .icon-cloud-upload, .icon-cloud-download, .icon-cloud, .icon-cogs, .icon-download-alt, .icon-bolt, .icon-star-empty, .icon-time, .icon-busy, .icon-list-ol, .icon-app-code, .icon-user, .icon-users, .icon-colocation2, .icon-tasks, .icon-equalizer, .icon-dollar, .icon-euro, .icon-credit, .icon-bug, .icon-domain2, .icon-dyi-hammer, .icon-copy-clipboard, .icon-app-box, .icon-database, .icon-shield {
 	font-family: 'openshift-icon';
 	speak: none;
 	font-style: normal;
@@ -285,4 +285,7 @@ you can use the generic selector below, but it's slower:
 }
 .icon-database:before {
 	content: "\ee49";
+}
+.icon-shield:before {
+	content: "\ee50";
 }
